ACLOCAL_AMFLAGS = -I m4
SUBDIRS = po xtk
ACLOCAL_AMFLAGS = -I m4INTROSPECTION_GIRS
EXTRA_DIST =                    \
	xtk+-2.0.pc.in	\
	omf.make

MAINTAINERCLEANFILES = 		\
	aclocal.m4		\
	config.guess		\
	config.h.in		\
	config.sub		\
	depcomp			\
	install-sh		\
	ltmain.sh		\
	missing			\
	mkinstalldirs		\
	omf.make		\
	py-compile		\
	m4/intltool.m4		\
	m4/libtool.m4		\
	m4/ltoptions.m4		\
	m4/ltsugar.m4		\
	m4/ltversion.m4		\
	m4/lt~obsolete.m4	\
	`find "$(srcdir)" -type f -name Makefile.in -print`

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = xtk+-2.0.pc
